--- a/Data_Investigation.ipynb
+++ b/Data_Investigation.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "96beeb08",
+   "id": "2b0bd93f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import import_ipynb\n",
+    "import import_ipynb ## pip install this to load jupyter notebooks as source files\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sqlite3\n",
@@ -20,27 +20,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "be24106b",
+   "id": "4a783881",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path1='./ka_devices.db'\n",
-    "path2='./ka_users.csv'\n",
-    "path3='./ka_actions.parquet'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "8aea812a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Load_and_Combine(path1,path2,path3):\n",
-    "    con=sqlite3.connect('./ka_devices.db')\n",
+    "### Load and combine datasets using a merge function#\n",
+    "def load_and_combine(path1,path2,path3):\n",
+    "    con=sqlite3.connect(path1)\n",
     "    file1=pd.read_sql_query('SELECT * FROM devices',con)\n",
-    "    file2=pd.read_csv('./ka_users.csv')\n",
+    "    file2=pd.read_csv(path2)\n",
     "    file3=pd.read_parquet(path3,engine='pyarrow')\n",
+    "    ## merge 'on' not specified sinc eit is not relevant here. \n",
     "    frame=file2.merge(file1,on='uid_s')\n",
     "    frame=frame.merge(file3,on='uid_s')\n",
     "    return frame"
@@ -48,45 +38,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "1bed362b",
+   "execution_count": 3,
+   "id": "2d661ee6",
    "metadata": {},
    "outputs": [],
    "source": [
     "## filter data, we are interested in those who completed the tutorial###\n",
-    "def Filter_Data(Frame):\n",
+    "#Use this to show where the Na's are. \n",
+    "def filter_data(Frame):\n",
     "    Frame=Frame[Frame['game_stats_tutorial_complete']==1]\n",
+    "    ## Show na's per column \n",
     "    nlls=Frame.isnull().any()\n",
-    "    s_nlls=Frame.isna().sum()\n",
-    "    return Frame, s_nlls\n"
+    "    ## count number of nas##\n",
+    "    sum_nlls=Frame.isna().sum()\n",
+    "    return Frame, sum_nlls\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "97f704b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_column_types(frame):\n",
+    "    ## groups different column types \n",
+    "    column_types=frame.columns.to_series().groupby(frame.dtypes).groups\n",
+    "    types={i.name: v for i, v in column_types.items()}\n",
+    "    ## Selects category and float type#\n",
+    "    cat_types=[i for i in types['object']]\n",
+    "    cluster_types=[i for i in types['float64']]\n",
+    "    cluster_types.append('total_spend')\n",
+    "    return  types, cat_types, cluster_types\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "77f34159",
+   "id": "1ccecaa0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Split_Col_Types(frame):\n",
-    "    column_types=frame.columns.to_series().groupby(frame.dtypes).groups\n",
-    "    types={i.name: v for i, v in column_types.items()}\n",
-    "    cat_types=[i for i in types['object']]\n",
-    "    cluster_types=[i for i in types['float64']]\n",
-    "    cluster_types.append('total_spend')\n",
-    "    return  types, cat_types, cluster_types\n",
-    "\n",
-    "#types,cat_types,cluster_types=Split_Col_Types(df_F)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "6089d4ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Show_Unique_Values(Frame,cat_types):\n",
+    "## Displays unique category values to see effect of OneHotEncoding\n",
+    "def show_unique_values(Frame,cat_types):\n",
     "    for col in cat_types:\n",
     "        print(Frame[col].unique())\n",
     "        \n",
@@ -95,88 +90,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "cc09a094",
+   "execution_count": 6,
+   "id": "2342de92",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Show_Unique_Values(df_F,cat_types)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "c3b196bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "## Counts the disticnt values for each category\n",
     "### too many distinct values for these categories. This will be an issue when One hot Encoding. \n",
     "##### We can also use nltk and reg expression to reduce the amount of variability by grouping up.. consider this if time permits\n",
-    "def Count_Unique(Frame,cat_types):\n",
+    "def count_unique(Frame,cat_types):\n",
     "    Frame[cat_types].nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "7271de35",
+   "execution_count": 7,
+   "id": "729dda1f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns_drop=['game_stats_tutorial_complete','index','device_os_s','device_mapped_s','geo_s','device_manufacturer_s','device_model_s','device_gpu_s','lang_s']\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "f466ebbf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Drop_Cols(Frame,columns_drop):\n",
+    "#### columns are selected to be dropped based on count_unique function##\n",
+    "def drop_columns(Frame,columns_drop):\n",
     "    Frame=Frame.drop(columns_drop,axis=1)\n",
     "    return Frame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "f9d36712",
+   "execution_count": 8,
+   "id": "bb0a1dab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "\n",
-    "\n",
-    "def Restruct_Data(Frame,cluster_types):\n",
+    "#### Data is standardized and na's are removed\n",
+    "def restructure_data(Frame,cluster_types):\n",
     "    Frame.dropna(inplace=True)\n",
     "    scaler=StandardScaler()\n",
-    "    Frame[cluster_types]=scaler.fit(Frame[cluster_types])\n",
-    "    Frame[cluster_types]=scaler.transform(Frame[cluster_types])\n",
+    "    Frame[cluster_types]=scaler.fit_transform(Frame[cluster_types])\n",
     "    Frame=pd.DataFrame(Frame,columns=Frame.columns)\n",
     "    Frame.set_index('uid_s',inplace=True)\n",
     "    return Frame\n",
     "\n",
-    "'''\n",
-    "def Restruct_Data(Frame,cluster_types):\n",
-    "    Frame=Frame.dropna()\n",
-    "    names=Frame.columns\n",
-    "    scaler=StandardScaler()\n",
-    "    ct = ColumnTransformer([\n",
-    "        ('somename', StandardScaler(), cluster_types)\n",
-    "    ], remainder='passthrough')\n",
-    "    Frame=ct.fit_transform(Frame)\n",
-    "    Frame=pd.DataFrame(Frame,columns=names)\n",
-    "    return Frame"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "777d8790",
+   "execution_count": 9,
+   "id": "014d2dc7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "### one hot encoding takes place here, old categorical columns are removed and original dataframe is joined\n",
     "def encode_and_concat(dataframe, feature):\n",
     "    dummies = pd.get_dummies(dataframe[feature])\n",
     "    res = pd.concat([dataframe, dummies], axis=1)\n",
@@ -189,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2a3b4c3",
+   "id": "9b5af2e1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -197,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b31a566",
+   "id": "4e5ae14b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -205,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c87d0c5",
+   "id": "db7b0f0f",
    "metadata": {},
    "outputs": [],
    "source": []
