--- a/ML_PCA.ipynb
+++ b/ML_PCA.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2e736c5c",
+   "id": "208aed64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "01377794",
+   "id": "664f3dae",
    "metadata": {},
    "outputs": [
     {
@@ -31,17 +31,17 @@
     }
    ],
    "source": [
-    "from Data_investigation import Load_and_Combine\n",
-    "from Data_investigation import Filter_Data\n",
-    "from Data_investigation import Drop_Cols\n",
-    "from Data_investigation import Split_Col_Types\n",
-    "from Data_investigation import Restruct_Data"
+    "from Data_investigation import load_and_combine\n",
+    "from Data_investigation import filter_data\n",
+    "from Data_investigation import drop_columns\n",
+    "from Data_investigation import split_column_types\n",
+    "from Data_investigation import restructure_data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b333cad8",
+   "id": "73a1d0ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,162 +54,86 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c982c8d2",
+   "id": "cb4b961d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_F=Load_and_Combine(path1,path2,path3)"
+    "df=load_and_combine(path1,path2,path3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "090565e9",
+   "id": "2f799f73",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_F,s_nlls=Filter_Data(df_F)"
+    "df,s_nlls=filter_data(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c01913b5",
+   "id": "3b3c596f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_F=Drop_Cols(df_F,columns_drop)"
+    "df=drop_columns(df,columns_drop)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b79c8a34",
+   "id": "b9f5bb06",
    "metadata": {},
    "outputs": [],
    "source": [
-    "types,cat_types,cluster_types= Split_Col_Types(df_F)"
+    "types,cat_types,cluster_types= split_column_types(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "243cb37d",
+   "execution_count": 9,
+   "id": "0b1c4096",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cat_types=[i for i in types['object'] if i not in columns_drop]\n",
-    "cluster_types1=[i for i in types['float64'] if i not  in columns_drop]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "056dcee0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['device_mem_i',\n",
-       " 'device_gmem_i',\n",
-       " 'device_mem_grouping_i',\n",
-       " 'device_gmem_grouping_i',\n",
-       " 'device_numcpu_i',\n",
-       " 'device_height_i',\n",
-       " 'logins',\n",
-       " 'game_stats_tutorial_complete_time',\n",
-       " 'game_stats_xp',\n",
-       " 'game_stats_xp1',\n",
-       " 'game_stats_xp2',\n",
-       " 'game_stats_xp3',\n",
-       " 'redeemer_actions',\n",
-       " 'scribe_actions']"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cluster_types1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "32309528",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['device_mem_i',\n",
-       " 'device_gmem_i',\n",
-       " 'device_mem_grouping_i',\n",
-       " 'device_gmem_grouping_i',\n",
-       " 'device_numcpu_i',\n",
-       " 'device_height_i',\n",
-       " 'logins',\n",
-       " 'game_stats_tutorial_complete_time',\n",
-       " 'game_stats_xp',\n",
-       " 'game_stats_xp1',\n",
-       " 'game_stats_xp2',\n",
-       " 'game_stats_xp3',\n",
-       " 'redeemer_actions',\n",
-       " 'scribe_actions',\n",
-       " 'total_spend']"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cluster_types"
+    "df=restructure_data(df,cluster_types)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ecfdc88c",
+   "id": "4dcd8b2a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_F=Restruct_Data(df_F,cluster_types)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "702c3440",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Xc=df_F[cluster_types].copy()\n",
+    "###select only numerical columns for PCA \n",
+    "Xc=df[cluster_types].copy()\n",
     "Xc.fillna(Xc.mean(),inplace=True)\n",
+    "### standardize data \n",
     "scaler=StandardScaler()\n",
     "Xc=scaler.fit_transform(Xc)\n",
+    "## convert back to datframe \n",
     "Xc=pd.DataFrame(Xc,columns=cluster_types)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "c3b0f249",
+   "execution_count": 11,
+   "id": "8a301682",
    "metadata": {},
    "outputs": [],
    "source": [
+    "## 2 Principal components to capture the most variablility \n",
     "pca = decomposition.PCA(n_components=2)\n",
     "Xc = pca.fit_transform(Xc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "24982136",
+   "execution_count": 12,
+   "id": "f6ab3062",
    "metadata": {},
    "outputs": [
     {
@@ -218,29 +142,31 @@
        "array([0.29218752, 0.50516628])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## Observe how much vriation is captured \n",
     "pca.explained_variance_ratio_.cumsum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "7a2d7f56",
+   "execution_count": 13,
+   "id": "aeba15b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "loadings = pd.DataFrame(pca.components_.T, columns=['PC1', 'PC2'],index=Xc.columns)"
+    "## Use loadings as a method to cluster variables rather than samples \n",
+    "loadings = pd.DataFrame(pca.components_.T, columns=['PC1', 'PC2'],index=cluster_types)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "4c400fed",
+   "execution_count": 14,
+   "id": "71fe3fda",
    "metadata": {},
    "outputs": [
     {
@@ -257,6 +183,7 @@
     }
    ],
    "source": [
+    "#plot the information to visually determine which are close to each other \n",
     "ax1 = loadings.plot.scatter(x='PC1',\n",
     "                      y='PC2',\n",
     "                      c='DarkBlue',figsize=(20,10),\n",
@@ -267,8 +194,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b588cbfb",
+   "execution_count": 15,
+   "id": "6ea3c0ed",
    "metadata": {},
    "outputs": [],
    "source": [
