--- a/ML_PCA.ipynb
+++ b/ML_PCA.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "208aed64",
+   "id": "70970f40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "664f3dae",
+   "id": "5febc665",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "73a1d0ce",
+   "id": "44cfe107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cb4b961d",
+   "id": "ed3a7ea9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2f799f73",
+   "id": "c1901120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3b3c596f",
+   "id": "888af6d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b9f5bb06",
+   "id": "e362d74a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,8 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "0b1c4096",
+   "execution_count": 8,
+   "id": "97b658ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,37 +103,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "4dcd8b2a",
+   "execution_count": 9,
+   "id": "3a1c8781",
    "metadata": {},
    "outputs": [],
    "source": [
     "###select only numerical columns for PCA \n",
-    "Xc=df[cluster_types].copy()\n",
-    "Xc.fillna(Xc.mean(),inplace=True)\n",
+    "X_cluster=df[cluster_types].copy()\n",
+    "X_cluster.fillna(X_cluster.mean(),inplace=True)\n",
     "### standardize data \n",
     "scaler=StandardScaler()\n",
-    "Xc=scaler.fit_transform(Xc)\n",
+    "X_cluster=scaler.fit_transform(X_cluster)\n",
     "## convert back to datframe \n",
-    "Xc=pd.DataFrame(Xc,columns=cluster_types)"
+    "X_cluster=pd.DataFrame(X_cluster,columns=cluster_types)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "8a301682",
+   "execution_count": 10,
+   "id": "3b40421f",
    "metadata": {},
    "outputs": [],
    "source": [
     "## 2 Principal components to capture the most variablility \n",
     "pca = decomposition.PCA(n_components=2)\n",
-    "Xc = pca.fit_transform(Xc)"
+    "X_cluster = pca.fit_transform(X_cluster)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "f6ab3062",
+   "execution_count": 11,
+   "id": "5eb10df1",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "array([0.29218752, 0.50516628])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,8 +154,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "aeba15b0",
+   "execution_count": 12,
+   "id": "34261f65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,8 +165,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "71fe3fda",
+   "execution_count": 13,
+   "id": "fb86c2c8",
    "metadata": {},
    "outputs": [
     {
@@ -194,8 +194,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "6ea3c0ed",
+   "execution_count": 14,
+   "id": "8becdc53",
    "metadata": {},
    "outputs": [],
    "source": [
